[hotfix] Add radio group around oneof static property renderer

--- a/ui/src/app/core-ui/static-properties/static-one-of-input/static-one-of-input.component.css
+++ b/ui/src/app/core-ui/static-properties/static-one-of-input/static-one-of-input.component.css
@@ -32,3 +32,9 @@
 .description {
     font-size: 10px;
 }
+
+.radio-group {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+}
