[STREAMPIPES-234] Labeled time intervals can now be changed

--- a/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
@@ -82,8 +82,8 @@
                      [data]="data"
                      [layout]="graph.layout"
                      [config]="graph.config"
-                     (selecting)="selectDataPoints($event)"
-                     (plotly_click)="test($event)">
+                     (selected)="selectDataPoints($event)"
+                     (plotly_click)="changeLabelOfArea($event)">
             <!--                     (relayout)="handleDefaultModeBarButtonClicks($event)"-->
 
         </plotly-plot>
