--- a/ui/src/app/core-ui/static-properties/static-property.component.html
+++ b/ui/src/app/core-ui/static-properties/static-property.component.html
@@ -48,7 +48,9 @@
             </app-static-free-input>
 
             <app-static-file-input *ngIf="isFileStaticProperty(staticProperty)"
-                                   (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty"
+                                   (inputEmitter)="valueChange($event)"
+                                   [staticProperty]="staticProperty"
+                                   (updateEmitter)="emitUpdate($event)"
                                    [adapterId]="adapterId">
             </app-static-file-input>
 
@@ -93,7 +95,8 @@
                                       [displayRecommended]="displayRecommended"
                                       [parentForm]="parentForm"
                                       [fieldName]="fieldName"
-                                      (inputEmitter)="valueChange($event)">
+                                      (inputEmitter)="valueChange($event)"
+                                      (updateEmitter)="emitUpdate($event)">
             </app-static-mapping-unary>
 
             <app-static-mapping-nary *ngIf="isMappingNaryProperty(staticProperty)"
@@ -102,7 +105,8 @@
                                      [fieldName]="fieldName"
                                      [staticProperty]="staticProperty"
                                      [displayRecommended]="displayRecommended"
-                                     (inputEmitter)="valueChange($event)">
+                                     (inputEmitter)="valueChange($event)"
+                                     (updateEmitter)="emitUpdate($event)">
             </app-static-mapping-nary>
 
             <app-static-alternatives *ngIf="isAlternativesStaticProperty(staticProperty)"
