--- a/ui/src/app/files/dialog/file-upload/file-upload-dialog.component.scss
+++ b/ui/src/app/files/dialog/file-upload/file-upload-dialog.component.scss
@@ -16,19 +16,4 @@
  *
  */
 
-p {
-    width: 100px;
-    float: left;
-    margin: 20px  15px 0 0;
-}
-form {
-    float: left;
-}
-
-.green-icon {
-    color: green;
-}
-
-.green-icon svg {
-    fill: green;
-}
+@import 'src/scss/sp/sp-dialog';
