[STREAMPIPES-242] Mqtt adapter next button can not be clicked

--- a/ui/src/app/core-ui/static-properties/static-secret-input/static-secret-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-secret-input/static-secret-input.component.html
@@ -21,7 +21,7 @@
             <mat-form-field fxFlex >
                 <input type="password"
                        fxFlex
-                       formControlName="{{staticProperty.internalName}}"
+                       formControlName="{{fieldName}}"
                        matInput
                        [placeholder]="staticProperty.label"
                        required
