--- a/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.component.html
+++ b/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.component.html
@@ -15,55 +15,56 @@
   ~ limitations under the License.
   ~
   -->
-
-<div *ngIf="currentMouseOverElement==pipelineElement.payload.dom" class="sp-fade-options">
-    <span class="options-button customize-button" *ngIf="pipelineElement.type!='stream'" style="z-index:10">
-        <button mat-button mat-icon-button matTooltip="Configure Element"
-                [matTooltipPosition]="'above'"
-                (click)="customizeElement(pipelineElement)">
-            <i class="material-icons">settings</i>
+<div>
+    <div [ngStyle]="currentMouseOverElement==pipelineElement.payload.dom ? {opacity: 1} : {opacity: 0}" class="sp-fade-options">
+        <span class="options-button customize-button" *ngIf="pipelineElement.type!='stream'" style="z-index:10">
+            <button mat-button mat-icon-button matTooltip="Configure Element"
+                    [matTooltipPosition]="'above'"
+                    (click)="customizeElement(pipelineElement)">
+                <i class="material-icons">settings</i>
+                </button>
+        </span>
+        <span class="options-button customize-button"
+              *ngIf="pipelineElement.type=='stream' && isWildcardTopic()"
+              style="z-index:10">
+            <button mat-button mat-icon-button matTooltip="Configure Element" [matTooltipPosition]="'above'"
+                    (click)="openCustomizeStreamDialog()" [disabled]="!isRootElement()">
+                <i class="material-icons">settings</i>
             </button>
-    </span>
-    <span class="options-button customize-button"
-          *ngIf="pipelineElement.type=='stream' && isWildcardTopic()"
-          style="z-index:10">
-        <button mat-button mat-icon-button matTooltip="Configure Element" [matTooltipPosition]="'above'"
-                (click)="openCustomizeStreamDialog()" [disabled]="!isRootElement()">
-            <i class="material-icons">settings</i>
-        </button>
-    </span>
-    <span class="options-button delete-button" style="z-index:10">
-        <button mat-button mat-icon-button matTooltip="Delete Element" [matTooltipPosition]="'above'"
-                (click)="removeElement(pipelineElement)" [disabled]="!isRootElement()">
-            <i class="material-icons">clear</i>
-        </button>
-    </span>
-    <span class="options-button possible-button" *ngIf="pipelineElement.type!='action'" style="z-index:10">
-        <button mat-button mat-icon-button matTooltip="Compatible Elements" [matTooltipPosition]="'below'"
-                [disabled]="!possibleElements || possibleElements.length == 0 || !isConfigured()"
-                (click)="openPossibleElementsDialog()">
-            <i class="material-icons">visibility</i>
-    </button>
-    </span>
-    <span class="options-button recommended-button"
-          *ngIf="pipelineElement.type!='action' && (recommendationsAvailable) && recommendedElements.length > 0"
-          style="z-index:10">
-        <button mat-button mat-icon-button matTooltip="Recommended Elements" [matTooltipPosition]="'below'"
-                (click)="showRecommendations($event)"
-                [disabled]="!recommendationsAvailable || !isConfigured()">
-            <i class="material-icons">add</i>
-        </button>
-    </span>
-    <span class="options-button help-button" style="z-index:10">
-        <button matTooltip="Help" [matTooltipPosition]="'below'"
-                mat-button mat-icon-button (click)="openHelpDialog()">?
+        </span>
+        <span class="options-button delete-button" style="z-index:10">
+            <button mat-button mat-icon-button matTooltip="Delete Element" [matTooltipPosition]="'above'"
+                    (click)="removeElement(pipelineElement)" [disabled]="!isRootElement()">
+                <i class="material-icons">clear</i>
             </button>
-    </span>
-    <div class="editor-pe-info" [ngClass]="'pe-info-' + pipelineElementCssType">
-        {{pipelineElement.payload.name}}
+        </span>
+        <span class="options-button possible-button" *ngIf="pipelineElement.type!='action'" style="z-index:10">
+            <button mat-button mat-icon-button matTooltip="Compatible Elements" [matTooltipPosition]="'below'"
+                    [disabled]="!possibleElements || possibleElements.length == 0 || !isConfigured()"
+                    (click)="openPossibleElementsDialog()">
+                <i class="material-icons">visibility</i>
+        </button>
+        </span>
+        <span class="options-button recommended-button"
+              *ngIf="pipelineElement.type!='action' && (recommendationsAvailable) && recommendedElements.length > 0"
+              style="z-index:10">
+            <button mat-button mat-icon-button matTooltip="Recommended Elements" [matTooltipPosition]="'below'"
+                    (click)="showRecommendations($event)"
+                    [disabled]="!recommendationsAvailable || !isConfigured()">
+                <i class="material-icons">add</i>
+            </button>
+        </span>
+        <span class="options-button help-button" style="z-index:10">
+            <button matTooltip="Help" [matTooltipPosition]="'below'"
+                    mat-button mat-icon-button (click)="openHelpDialog()">?
+                </button>
+        </span>
+        <div class="editor-pe-info" [ngClass]="'pe-info-' + pipelineElementCssType">
+            {{pipelineElement.payload.name}}
+        </div>
     </div>
-</div>
-<pipeline-element-recommendation [rawPipelineModel]="rawPipelineModel"
+    <pipeline-element-recommendation [rawPipelineModel]="rawPipelineModel"
                                  [pipelineElementDomId]="pipelineElement.payload.dom"
                                  [recommendedElements]="recommendedElements"
                                  [recommendationsShown]="recommendationsShown" *ngIf="recommendationsAvailable"></pipeline-element-recommendation>
+</div>
