--- a/ui/src/app/core-ui/static-properties/static-file-input/static-file-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-file-input/static-file-input.component.html
@@ -66,7 +66,7 @@
             </mat-form-field>
             <!--<div fxLayoutAlign="center none">-->
             <div>
-                <button color="primary" mat-raised-button (click)="upload()">
+                <button color="primary" mat-raised-button (click)="upload()" [disabled]="!fileName">
                     Upload
                 </button>
             </div>
