--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -17,7 +17,7 @@
   -->
 
 <div fxFlex="100" fxLayout="column" *ngIf="filteredPipelinesAvailable" style="margin:1px;">
-    <table fxFlex="100" mat-table [dataSource]="dataSource" style="width: 100%;">
+    <table fxFlex="100" mat-table [dataSource]="dataSource" style="width: 100%;" matSort>
         <ng-container matColumnDef="start">
             <th mat-header-cell *matHeaderCellDef> Start</th>
             <td mat-cell *matCellDef="let pipeline">
@@ -35,7 +35,7 @@
         </ng-container>
 
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name</th>
+            <th mat-header-cell mat-sort-header *matHeaderCellDef> Name</th>
             <td mat-cell *matCellDef="let pipeline">
                 <h4 style="margin-bottom:0px;">{{pipeline.name}}</h4>
                 <h5>{{pipeline.description != '' ? pipeline.description : '-'}}</h5>
@@ -66,7 +66,7 @@
                         <i class="material-icons">mode_edit</i>
                     </button>
                 </span>
-                    <span fxFlex fxFlexOrder="3" layout="row" fxLayoutAlign="center center">
+                    <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
                     <button color="primary" mat-button mat-icon-button matTooltip="Delete pipeline" matTooltipPosition="above"
                             (click)="pipelineOperationsService.showDeleteDialog(pipeline, refreshPipelinesEmitter)">
                         <i class="material-icons">delete</i>
@@ -81,7 +81,7 @@
 
     </table>
     <div fxFlex="100" fxLayoutAlign="end end">
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="10"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="20"></mat-paginator>
     </div>
 </div>
 <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" *ngIf="!filteredPipelinesAvailable">
