--- a/ui/src/app/core-ui/widget/barchart/barchart-widget.component.html
+++ b/ui/src/app/core-ui/widget/barchart/barchart-widget.component.html
@@ -16,15 +16,17 @@
   ~
   -->
 
-<div flex="100" fxLayout="row">
-    <sp-status-widget fxFlex="25" [label]="'Shipped'" [statusValue]="shippedTime"
-                             [color]="'rgb(156, 156, 156)'"></sp-status-widget>
-    <sp-status-widget fxFlex="25" [label]="'Delivered'" [statusValue]="deliveredTime"
-                             [color]="'rgb(156, 156, 156)'"></sp-status-widget>
-    <sp-status-widget fxFlex="25" [label]="'Took'" [statusValue]="tookTime"
-                             [color]="'rgb(156, 156, 156)'"></sp-status-widget>
-    <sp-status-widget fxFlex="25" [label]="'Status'" [statusValue]="errorCode" [color]="statusColor"></sp-status-widget>
-</div>
-<div *ngFor="let statusMessage of statusMessages">
-    <h4>{{statusMessage}}</h4>
+<div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" [ngStyle]="{'background-color': backgroundColor, 'width':'265px', 'max-width': '265px', 'margin-left': '8px'}">
+    <ngx-charts-bar-vertical
+            [view]="[265,150]"
+            [results]="data"
+            [scheme]="colorScheme"
+            [gradient]="false"
+            [xAxis]="false"
+            [yAxis]="true"
+            [legend]="false"
+            [showXAxisLabel]="false"
+            [showYAxisLabel]="false"
+            [ngStyle]="{'fill': backgroundColor}">
+    </ngx-charts-bar-vertical>
 </div>
