--- a/ui/src/app/pipeline-details/components/elements/pipeline-elements-row.component.html
+++ b/ui/src/app/pipeline-details/components/elements/pipeline-elements-row.component.html
@@ -18,12 +18,12 @@
 
 <div fxFlex="100" fxLayout="column">
     <div fxLayout="row" fxFlex="100">
-        <div fxFlex="30" fxLayout="row" style="margin-bottom:10px;">
+        <div fxFlex="{{showDescription ? 30 : 100}}}" fxLayout="row" style="margin-bottom:10px;">
             <span class="draggable-icon {{elementType}}">
                 <pipeline-element [preview]="true" [pipelineElement]="_element"></pipeline-element>
             </span>
         </div>
-        <div fxFlex="70" fxLayout="column" fxLayoutAlign="center left">
+        <div fxFlex="70" fxLayout="column" fxLayoutAlign="center left" *ngIf="showDescription">
             <b>{{element.name}}</b>
             {{element.description}}
         </div>
