--- a/ui/src/app/core-ui/static-properties/static-alternatives/static-alternatives.component.html
+++ b/ui/src/app/core-ui/static-properties/static-alternatives/static-alternatives.component.html
@@ -37,13 +37,15 @@
 
         </div>
 
-        <div *ngFor="let alternative of staticProperty.alternatives">
+        <div *ngFor="let alternative of staticProperty.alternatives; let i = index">
             <div *ngIf="alternative.selected == true && alternative.staticProperty != null">
                 <div style="padding-top: 0px; padding-bottom: 0px;
                                                    padding-left: 10px; padding-right: 10px">
                     <app-static-property [adapterId]="adapterId"
                                          [eventSchemas]="eventSchemas"
                                          [parentForm]="parentForm"
+                                         [staticProperties]="staticProperties"
+                                         [fieldName]="fieldName + '-'  + alternative.staticProperty.internalName + '-' + i"
                                          [staticProperty]="alternative.staticProperty"
                                          [displayRecommended]="displayRecommended"
                                          (validateEmitter)="valueChange($event)"
