Move labels component

--- a/ui/src/app/core-ui/image/image-categorize/image-categorize.component.html
+++ b/ui/src/app/core-ui/image/image-categorize/image-categorize.component.html
@@ -20,11 +20,11 @@
     <div fxLayout="column" fxLayoutAlign="space-between " >
         <div  fxLayout="row" fxLayoutAlign="space-around start">
 
-            <sp-image-labels
+            <sp-select-label
                     [labels]="labels"
                     [enableShortCuts]="true"
                     (labelChange)="handleLabelChange($event)">
-            </sp-image-labels>
+            </sp-select-label>
 
             <div fxLayout="column" fxLayoutAlign="space-between " >
                 <div fxLayout="row" fxLayoutAlign="center center" >
