--- a/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
+++ b/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
@@ -21,11 +21,11 @@
     <div fxLayout="column" fxLayoutAlign="space-between " >
         <div  fxLayout="row" fxLayoutAlign="space-around start">
 
-            <sp-image-labels style="width: 270px"
+            <sp-select-label style="width: 270px"
                     [labels]="labels"
                     [enableShortCuts]="isHoverComponent"
                     (labelChange)="handleLabelChange($event)">
-            </sp-image-labels>
+            </sp-select-label>
 
             <div fxLayout="column" fxLayoutAlign="space-between " >
                 <div style="display: flex; position: relative">
