--- a/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
+++ b/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
@@ -1,1 +1,22 @@
-<p>configure-labels works!</p>
+<div fxLayout="column" fxLayoutAlign="space-around center">
+
+    <h2>Labels</h2>
+    <div style="padding-left: 5px; padding-right: 5px; border-radius: 50px; font-size: 20px;">
+        <mat-form-field style="margin-top: -15px; margin-bottom: -10px">
+            <mat-select [(value)]="selectedCategory">
+                <mat-option *ngFor="let category of categories" [value]="category">
+                    {{category}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+    <mat-list>
+        <mat-list-item *ngFor="let label of _labels[selectedCategory]; index as i"
+                       [style.background-color]="_selectedLabel.label == label ? 'lightgrey' : 'white'"
+                       style="height: 30px; padding-top: 5px; padding-buttom: 5px; border-radius: 50px; margin-bottom: 5px"
+                       (click)="selectLabel({category: labelCategory, label: label})">
+            <mat-icon matListIcon [style.color]="colorService.getColor(label)" style="margin-top: -8px;">color_lens</mat-icon>
+            <h4 style="margin-top: -3px;"> {{label}} <label *ngIf="i < 10"> #{{i+1}}</label> </h4>
+        </mat-list-item>
+    </mat-list>
+</div>
