--- a/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
+++ b/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
@@ -22,8 +22,11 @@
         <button mat-button mat-raised-button color="primary" (click)="openNewDataViewDialog()">
             New Data View
         </button>
+        <button mat-button mat-raised-button color="primary" (click)="openEditLabelView()">
+            Edit Labels
+        </button>
     </div>
-    <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start stretch">
+    <div *ngIf="!editLabels" fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start stretch">
         <div fxFlex="100" class="assemblyOptions sp-blue-bg" style="padding:5px;">
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                 <h4>My Data Views</h4>
@@ -73,4 +76,6 @@
             </div>
         </div>
     </div>
+
+    <sp-configure-labels *ngIf="editLabels"></sp-configure-labels>
 </div>
