Add label model to ui

--- a/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
+++ b/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
@@ -1,6 +1,11 @@
 <div fxLayout="column" fxLayoutAlign="space-around center">
 
     <h2>Labels</h2>
+    <div fxFlex>
+        <button mat-button mat-flat-button (click)="addCategory()">
+            <mat-icon class="icon">add</mat-icon><span>Add new Category</span>
+        </button>
+    </div>
     <div style="padding-left: 5px; padding-right: 5px; border-radius: 50px; font-size: 20px;">
         <mat-form-field style="margin-top: -15px; margin-bottom: -10px">
             <mat-select [(value)]="selectedCategory">
@@ -19,4 +24,9 @@
             <h4 style="margin-top: -3px;"> {{label}} <label *ngIf="i < 10"> #{{i+1}}</label> </h4>
         </mat-list-item>
     </mat-list>
+    <div fxFlex>
+        <button mat-button mat-flat-button (click)="addLabel()">
+            <mat-icon class="icon">add</mat-icon><span>Add new Label</span>
+        </button>
+    </div>
 </div>
