Enable to add and delete labels

--- a/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
+++ b/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
@@ -15,26 +15,16 @@
             </mat-select>
         </mat-form-field>
     </div>
-    <mat-list>
-        <mat-list-item *ngFor="let label of selectedCategory.labels;"
-                       style="height: 30px; padding-top: 5px; padding-buttom: 5px; border-radius: 50px; margin-bottom: 5px">
-            <input matInput
-                   style="margin-top: -8px; margin-right: 10px; width: 20px;"
-                   autocomplete="off"
-                   [(colorPicker)]="label.color"
-                   (colorPickerChange)="label.color = $event"
-                   [cpPosition]="'bottom'"
-                   [style.background]="label.color" required
-            />
-<!--                   (blur)="emitUpdate()" -->
-<!--                   [cpPresetColors] = "presetColors"/>-->
 
-<!--            <mat-icon-->
-<!--                    matListIcon [style.color]="label.color" style="margin-top: -8px;">color_lens</mat-icon>-->
-            <h4 style="margin-top: -3px;"> {{label.name}} </h4>
-            <mat-icon  style="margin-left: 20px; margin-top: -8px;">delete</mat-icon>
-        </mat-list-item>
-    </mat-list>
+    <div fxLayout="column" fxLayoutAlign="center stretch">
+        <sp-label-list-item
+                *ngFor="let label of selectedCategory.labels;"
+                (removeLabel)="removeLabel($event)"
+                [label]="label">
+
+        </sp-label-list-item>
+    </div>
+
     <div fxFlex>
         <button mat-button mat-flat-button (click)="addLabel()">
             <mat-icon class="icon">add</mat-icon><span>Add new Label</span>
