--- a/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
+++ b/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
@@ -1,33 +1,50 @@
 <div fxLayout="column" fxLayoutAlign="space-around center">
 
-    <h2>Categories</h2>
-    <div fxFlex>
-        <button mat-button mat-flat-button (click)="addCategory()">
-            <mat-icon class="icon">add</mat-icon><span>Add new Category</span>
-        </button>
-    </div>
-    <div style="padding-left: 5px; padding-right: 5px; border-radius: 50px; font-size: 20px;">
+    <div *ngIf="!editCategory">
+        <h2>Categories</h2>
         <mat-form-field style="margin-top: -15px; margin-bottom: -10px">
-            <mat-select [(value)]="selectedCategory">
+            <mat-label>Select Label Category</mat-label>
+            <mat-select [(value)]="selectedCategory" (selectionChange)="startEditCategory($event)">
+                <mat-option value="internal_placeholder"></mat-option>
                 <mat-option *ngFor="let category of categories" [value]="category">
                     {{category.name}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
-    </div>
-
-    <div fxLayout="column" fxLayoutAlign="center stretch">
-        <sp-label-list-item
-                *ngFor="let label of selectedCategory.labels;"
-                (removeLabel)="removeLabel($event)"
-                [label]="label">
-
-        </sp-label-list-item>
-    </div>
-
-    <div fxFlex>
-        <button mat-button mat-flat-button (click)="addLabel()">
-            <mat-icon class="icon">add</mat-icon><span>Add new Label</span>
+        <button mat-button mat-flat-button (click)="addCategory()">
+            <mat-icon class="icon">add</mat-icon><span>Add new Category</span>
         </button>
     </div>
+
+    <div *ngIf="editCategory" fxLayout="column">
+        <div fxLayout="row">
+            <h2>Edit Category</h2>
+
+        </div>
+        <div fxLayout="row" fxLayoutAlign="space-between center">
+            <mat-form-field>
+                <mat-label>Category Name</mat-label>
+                <input matInput type="text" [(ngModel)]="selectedCategory.name">
+            </mat-form-field>
+            <button mat-button mat-flat-button color="warn" (click)="addCategory()">
+                <mat-icon class="icon">delete</mat-icon>
+            </button>
+        </div>
+        <div fxLayout="column" fxLayoutAlign="center stretch">
+            <sp-label-list-item
+                    *ngFor="let label of selectedCategory.labels;"
+                    (removeLabel)="removeLabel($event)"
+                    [label]="label">
+            </sp-label-list-item>
+        </div>
+        <div fxLayout="row" fxLayoutAlign="space-between center">
+            <button mat-button mat-flat-button (click)="addLabel()">
+                <mat-icon class="icon">add</mat-icon><span>Add new Label</span>
+            </button>
+            <button mat-button mat-raised-button color="primary" (click)="endEditCategory()">
+                <span>Back</span>
+            </button>
+        </div>
+    </div>
+
 </div>
