--- a/ui/src/app/core-ui/labels/components/label-list-item/label-list-item.component.html
+++ b/ui/src/app/core-ui/labels/components/label-list-item/label-list-item.component.html
@@ -4,13 +4,14 @@
                style="margin-right: 10px; width: 20px;"
                autocomplete="off"
                [(colorPicker)]="label.color"
-               (colorPickerChange)="label.color = $event"
+               (colorPickerChange)="updateLabelColor($event)"
                [cpPosition]="'bottom'"
                [style.background]="label.color" required
         />
     </div>
         <mat-form-field>
-            <input matInput type="text" [(ngModel)]="label.name">
+            <input matInput type="text" [(ngModel)]="label.name"
+            (ngModelChange)="updateLabelName($event)">
         </mat-form-field>
     <div>
         <mat-icon style="margin-left: 20px; margin-top: 5px; cursor: pointer;" (click)="clickRemoveLabel()">remove</mat-icon>
